--- a/src/main/resources/templates/sessao.html
+++ b/src/main/resources/templates/sessao.html
@@ -114,8 +114,8 @@
 							<td><a class="btn btn-primary"
 								th:href="@{/sessao/atualizar/{id}(id = ${sessao.id})}">Atualizar
 							</a></td>
-							<td><a class="btn btn-sm  btn-danger"
-								th:href="@{/sessao/excluir/{id}(id = ${sessao.id})}">X</a></td>
+							<td><a class="btn btn-sm  btn-danger glyphicon glyphicon-remove"
+								th:href="@{/sessao/excluir/{id}(id = ${sessao.id})}"></a></td>
 						</tr>
 					</tbody>
 				</table>
